# nadakki-ai-suite

./: .env.backup  .env.backup_old  .env.development  .env.example  .env.google_ads  .env.production  .gitignore  .nadakki_manifest.jsonl  00_DISCOVERY_SIMPLE.ps1  00_MANIFEST.json  ACTIVAR-NADAKKI.ps1  AGENTS_CHECKLIST.txt  AUDITORIA_AGENTES_20251030_195853.md  AUDITORIA_COMPLETA_20251030_193302.md  AUDITORIA_COMPLETA_20251030_194241.md  AUDIT_COMPLETA_20260122_2019.csv  AUDIT_REPORT_2026-01-19_16-11-19.json  AUDIT_REPORT_2026-01-19_16-11-19.md  Agent-Consolidator-Hybrid-Fixed.ps1  Agent-Consolidator-Hybrid.ps1  Audit-CreditosCore-Final.ps1  Audit-CreditosCore-Robust.ps1  Deep-Agent-Search.ps1  Dockerfile  EVALUATION_REPORT_20251031_050734.md  FASE-9-ACELERADA.ps1  FASE-9-DEFINITIVO.ps1  FASE-9-FINAL.ps1  GOOGLE_ADS_INTEGRATION_SUMMARY.txt  Generate-4-Agents-FINAL.ps1  NADAKKI_AUDIT_REPORT_20260101_184011.json  NADAKKI_DEPLOY.ps1  NADAKKI_SUPER_SIMPLE.ps1  NADAKKI_TEST.ps1  PROMPT_EXECUTION.md  ProjectValidationMaster.ps1  README.md  README_ENTERPRISE.md  README_v6.md  STATE.json  (+233 more)
NadakkiSocialAdapters/: .env.example  .gitignore  __init__.py  meta_adapter.py  pyproject.toml  requirements.txt  setup_log_2026-01-01_14-50-50.txt
NadakkiSocialAdapters/adapters/: __init__.py  linkedin_adapter.py  meta_adapter.py  pinterest_adapter.py  social_network_adapter.py  tiktok_adapter.py  x_adapter.py  youtube_adapter.py
NadakkiSocialAdapters/auth/: __init__.py  social_connections.py
NadakkiSocialAdapters/docs/: OAuthSetup.md  README.md
NadakkiSocialAdapters/tests/: test_auth.py  (+1 more)
(+1462 files in other folders)
