[project]
name = "nadakki-social-adapters"
version = "3.0.0"
description = "Enterprise social media integration for Nadakki AI Suite"
readme = "docs/README.md"
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max-line-length = 79
ignore = ["E501", "W503"]